Fix bug where button text color was blue on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,7 @@ p {
 
 button {
     cursor: pointer;
+    color: black;
 }
 
 button:hover {
